syntax = "proto3";
package proto;

message Test1Request { }
message Test1Reply { }

message Test2Request { }
message Test2Reply { }

service Test1 {
    rpc test1(Test1Request) returns (Test1Reply);
}

service Test2 {
    rpc test2(Test2Request) returns (Test2Reply);
}